@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-30T00:52:05Z",
+  "timestamp" : "2022-04-03T08:13:08Z",
   "count_outdated" : 235,
   "uniques_outdated" : 109,
-  "count" : 238,
-  "uniques" : 111,
+  "count" : 249,
+  "uniques" : 117,
   "clones" : [
     {
       "timestamp": "2022-03-26T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-03T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ]
     }
   ]
 }
