@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 14,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-03-26T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-03T00:00:00Z",
+      "count": 11,
+      "uniques": 6
     }
   ]
 }
